SQLParser/src/SQLParser.java
/* Generated By:JavaCC: Do not edit this line. SQLParser.java */
//import
import java.io.IOException;
import java.util.ArrayList;

import com.sleepycat.je.Environment;
import com.sleepycat.je.EnvironmentConfig;
import java.io.File;


import DDL.*;
import DML.*;
import DBQuery.*;
import DML.Where.*;

public class SQLParser implements SQLParserConstants {
  public static final int PRINT_SYNTAX_ERROR = 0;
  public static final int CREATE_TABLE_QUERY = 1;
  public static final int DROP_TABLE_QUERY = 2;
  public static final int DESC_QUERY = 3;
  public static final int SHOW_TABLES_QUERY = 4;
  public static final int SELECT_QUERY = 5;
  public static final int INSERT_QUERY = 6;
  public static final int DELETE_QUERY = 7;

  //variables for create table query
  static String globalTableName = null; // ÏøºÎ¶¨ Î∞îÍ? ?ïå ?Ç¨?ö©?ïòÍ∏?
  static TableSchema TableSchema = null;
  static ColumnDefinition ColDef = null;
  static ForeignKeyDefinition ForeignDef = null;
  static Insert Insert = null;
  static Delete Delete = null;
  static Select Select = null;

  public static void main(String args[]) throws ParseException
  {

    SQLParser parser = new SQLParser(System.in);
    System.out.print("DB_2016-12155> ");

    while (true)
    {
      try
      {
        parser.command();
      }
      catch (Exception e)
      {
        printMessage(PRINT_SYNTAX_ERROR);
        SQLParser.ReInit(System.in);
      }
    }
  }

  //?åå?ùºÎØ∏ÌÑ∞Î°? ?ì§?ñ¥?ò§?äî int Í∞íÏóê ?î∞?ùº ?ï¥?ãπ?êò?äî Î¨∏Íµ¨Î•? Ï∂úÎ†•?ïú?ã§.
  public static void printMessage(int q)
  {
    switch(q)
    {
      case PRINT_SYNTAX_ERROR:
        System.out.println("Syntax error");
        break;
      case CREATE_TABLE_QUERY:
        DDLQuery.createTableQuery(TableSchema);
        TableSchema = null;
        break;
      case DROP_TABLE_QUERY:
        DDLQuery.dropTableQuery(globalTableName);
        globalTableName = null;
        break;
      case DESC_QUERY:
        DDLQuery.descQuery(globalTableName);
        globalTableName = null;
        break;
      case SHOW_TABLES_QUERY:
        DDLQuery.showTablesQuery();
        break;
      case INSERT_QUERY:
        Insert.execute();
        Insert = null;
        break;
      case DELETE_QUERY:
        Delete.execute();
        Delete = null;
        break;
      case SELECT_QUERY:
        Select.execute();
        Select = null;
        break;
    }
    System.out.print("DB_2016-12155> ");
  }

  static final public void command() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CREATE_TABLE:
    case DROP_TABLE:
    case DESC:
    case SHOW_TABLES:
    case SELECT:
    case INSERT:
    case DELETE:
      queryList();
      break;
    case EXIT:
      jj_consume_token(EXIT);
      jj_consume_token(SEMICOLON);
      // Environment & Database define
      Environment myDbEnvironment = null;
      // Open Database Environment or if not, create one.
      EnvironmentConfig envConfig = new EnvironmentConfig();
      envConfig.setAllowCreate(true);
      myDbEnvironment = new Environment(new File("db/"), envConfig);
      myDbEnvironment.sync();
      if(myDbEnvironment != null) myDbEnvironment.close();

      System.exit(0);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void queryList() throws ParseException {
  int q;
    label_1:
    while (true) {
      q = query();
      jj_consume_token(SEMICOLON);
      //?îÑÎ°¨Ìè¨?ä∏?? ?ûÖ?†•?óê ÎßûÎäî Î©îÏÑ∏Ïß?Î•? Ï∂úÎ†•?ïú?ã§.
      printMessage(q);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CREATE_TABLE:
      case DROP_TABLE:
      case DESC:
      case SHOW_TABLES:
      case SELECT:
      case INSERT:
      case DELETE:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
  }

//?ì§?ñ¥?ò® ?ûÖ?†•?óê ?ï¥?ãπ?ïò?äî ÏøºÎ¶¨Î•? ?Çò???Ç¥?äî int Í∞íÏùÑ Î¶¨ÌÑ¥?ïú?ã§.
  static final public int query() throws ParseException {
  int q;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CREATE_TABLE:
      createTableQuery();
      q = CREATE_TABLE_QUERY;
      break;
    case DROP_TABLE:
      dropTableQuery();
           q = DROP_TABLE_QUERY;
      break;
    case DESC:
      descQuery();
           q = DESC_QUERY;
      break;
    case SHOW_TABLES:
      showTablesQuery();
           q = SHOW_TABLES_QUERY;
      break;
    case SELECT:
      selectQuery();
           q = SELECT_QUERY;
      break;
    case INSERT:
      insertQuery();
           q = INSERT_QUERY;
      break;
    case DELETE:
      deleteQuery();
           q = DELETE_QUERY;
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return q;}
    throw new Error("Missing return statement in function");
  }

  static final public void createTableQuery() throws ParseException {
    jj_consume_token(CREATE_TABLE);
    globalTableName = tableName();
    TableSchema = new TableSchema(globalTableName);
    globalTableName = null;
    tableElementList();
  }

  static final public void tableElementList() throws ParseException {
    jj_consume_token(LEFT_PAREN);
    tableElement();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      tableElement();
    }
    jj_consume_token(RIGHT_PAREN);
  }

  static final public void tableElement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEGAL_IDENTIFIER:
      columnDefinition();
      break;
    case PRIMARY_KEY:
    case FOREIGN_KEY:
      tableConstraintDefinition();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void columnDefinition() throws ParseException {
  String s;
  int i;
    s = columnName();
     ColDef = new ColumnDefinition(s);
    dataType();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT_NULL:
      jj_consume_token(NOT_NULL);
      ColDef.notNull = true;
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    TableSchema.ColDefList.add(ColDef);
    ColDef = null;
  }

  static final public void tableConstraintDefinition() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRIMARY_KEY:
      primaryKeyConstraint();
      break;
    case FOREIGN_KEY:
      referentialConstraint();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void primaryKeyConstraint() throws ParseException {
    jj_consume_token(PRIMARY_KEY);
    TableSchema.PrimaryDef = columnNameList();
    TableSchema.numPrimary++;
  }

  static final public void referentialConstraint() throws ParseException {
  ForeignDef = new ForeignKeyDefinition();
    jj_consume_token(FOREIGN_KEY);
    ForeignDef.referencingColumns = columnNameList();
    jj_consume_token(REFERENCES);
    ForeignDef.referencedTable = tableName();
    ForeignDef.referencedColumns = columnNameList();
    TableSchema.ForeignDefList.add(ForeignDef);
    ForeignDef = null;
  }

  static final public ArrayList<String> columnNameList() throws ParseException {
  String s;
  ArrayList<String> columnList = new ArrayList<String>();
    jj_consume_token(LEFT_PAREN);
    s = columnName();
    columnList.add(s);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      s = columnName();
      columnList.add(s);
    }
    jj_consume_token(RIGHT_PAREN);
    {if (true) return columnList;}
    throw new Error("Missing return statement in function");
  }

  static final public void dataType() throws ParseException {
  Token t;
  int i;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
    ColDef.type = 1;
      break;
    case CHAR:
      jj_consume_token(CHAR);
      jj_consume_token(LEFT_PAREN);
      t = jj_consume_token(INT_VALUE);
      jj_consume_token(RIGHT_PAREN);
    ColDef.type = 2;
    i = Integer.parseInt(t.image);
    ColDef.charLength = i;
      break;
    case DATE:
      jj_consume_token(DATE);
    ColDef.type = 3;
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public String tableName() throws ParseException {
  Token t;
    t = jj_consume_token(LEGAL_IDENTIFIER);
    {if (true) return t.image.toLowerCase();}
    throw new Error("Missing return statement in function");
  }

  static final public String columnName() throws ParseException {
  Token t;
    t = jj_consume_token(LEGAL_IDENTIFIER);
    {if (true) return t.image.toLowerCase();}
    throw new Error("Missing return statement in function");
  }

  static final public void dropTableQuery() throws ParseException {
    jj_consume_token(DROP_TABLE);
    globalTableName = tableName();
  }

  static final public void descQuery() throws ParseException {
    jj_consume_token(DESC);
    globalTableName = tableName();
  }

  static final public void showTablesQuery() throws ParseException {
    jj_consume_token(SHOW_TABLES);
  }

  static final public void selectQuery() throws ParseException {
  Select = new Select();
    jj_consume_token(SELECT);
    selectList();
    tableExpression();
  }

  static final public void selectList() throws ParseException {
  SelectedColumn SelectedColumn;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASTERISK:
      jj_consume_token(ASTERISK);
    Select.SelectedColList = null;
      break;
    case LEGAL_IDENTIFIER:
      SelectedColumn = selectedColumn();
    Select.SelectedColList.add(SelectedColumn);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        SelectedColumn = selectedColumn();
      Select.SelectedColList.add(SelectedColumn);
      }
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public SelectedColumn selectedColumn() throws ParseException {
  SelectedColumn SelectedCol;
  String tableName = null;
  String columnName;
  String newColumnName;
    if (jj_2_1(2)) {
      tableName = tableName();
      jj_consume_token(PERIOD);
    } else {
      ;
    }
    columnName = columnName();
    newColumnName = columnName;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AS:
      jj_consume_token(AS);
      newColumnName = columnName();
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    SelectedCol = new SelectedColumn(tableName, columnName, newColumnName);
    {if (true) return SelectedCol;}
    throw new Error("Missing return statement in function");
  }

  static final public void tableExpression() throws ParseException {
  Where Where;
    fromClause();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
      Where = whereClause();
     Select.Where = Where;
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
  }

  static final public void fromClause() throws ParseException {
    jj_consume_token(FROM);
    tableReferenceList();
  }

  static final public void tableReferenceList() throws ParseException {
    referedTable();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      referedTable();
    }
  }

  static final public void referedTable() throws ParseException {
  String tableName;
  String newTableName;
    tableName = tableName();
    newTableName = tableName;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AS:
      jj_consume_token(AS);
      newTableName = tableName();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    Select.ReferedTableList.add(new ReferedTable(tableName, newTableName));
  }

  static final public Where whereClause() throws ParseException {
  Where Where = new Where();
  BoolValExp BoolValExp;
    jj_consume_token(WHERE);
    BoolValExp = booleanValueExpression();
    Where.BoolValExp = BoolValExp;
    {if (true) return Where;}
    throw new Error("Missing return statement in function");
  }

  static final public BoolValExp booleanValueExpression() throws ParseException {
  BoolValExp BoolValExp = new BoolValExp();
  BooleanTerm BTerm;
    BTerm = booleanTerm();
    BoolValExp.BTermList.add(BTerm);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_6;
      }
      jj_consume_token(OR);
      BTerm = booleanTerm();
      BoolValExp.BTermList.add(BTerm);
    }
    {if (true) return BoolValExp;}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanTerm booleanTerm() throws ParseException {
  BooleanTerm BTerm = new BooleanTerm();
  BooleanFactor BFactor;
    BFactor = booleanFactor();
    BTerm.BFactorList.add(BFactor);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_7;
      }
      jj_consume_token(AND);
      BFactor = booleanFactor();
      BTerm.BFactorList.add(BFactor);
    }
    {if (true) return BTerm;}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanFactor booleanFactor() throws ParseException {
  BooleanFactor BFactor = new BooleanFactor();
  BooleanTest BTest;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
      BFactor.isNot = true;
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    BTest = booleanTest();
    BFactor.BTest = BTest;
    {if (true) return BFactor;}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanTest booleanTest() throws ParseException {
  BooleanTest BTest;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_VALUE:
    case LEGAL_IDENTIFIER:
    case DATE_VALUE:
    case CHAR_STRING:
      BTest = predicate();
    {if (true) return BTest;}
      break;
    case LEFT_PAREN:
      BTest = parenthesizedBooleanExpression();
    {if (true) return BTest;}
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public BoolValExp parenthesizedBooleanExpression() throws ParseException {
  BoolValExp BoolValExp;
    jj_consume_token(LEFT_PAREN);
    BoolValExp = booleanValueExpression();
    jj_consume_token(RIGHT_PAREN);
    {if (true) return BoolValExp;}
    throw new Error("Missing return statement in function");
  }

  static final public Predicate predicate() throws ParseException {
  Predicate Predicate;
    if (jj_2_2(4)) {
      Predicate = comparisonPredicate();
    {if (true) return Predicate;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEGAL_IDENTIFIER:
        Predicate = nullPredicate();
    {if (true) return Predicate;}
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public ComparisionPredicate comparisonPredicate() throws ParseException {
  ComparisionPredicate ComparisionPredicate;
  Token t;
  CompOperand Left;
  CompOperand Right;
    Left = compOperand();
    t = jj_consume_token(COMP_OP);
    Right = compOperand();
    ComparisionPredicate = new ComparisionPredicate(Left, t.image, Right);
    {if (true) return ComparisionPredicate;}
    throw new Error("Missing return statement in function");
  }

  static final public CompOperand compOperand() throws ParseException {
  CompOperand CompOperand;
  String tableName = null;
  String columnName;
  Value Value;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_VALUE:
    case DATE_VALUE:
    case CHAR_STRING:
      Value = comparableValue();
    CompOperand = new CompOperand(Value);
    {if (true) return CompOperand;}
      break;
    case LEGAL_IDENTIFIER:
      if (jj_2_3(2)) {
        tableName = tableName();
        jj_consume_token(PERIOD);
      } else {
        ;
      }
      columnName = columnName();
    CompOperand = new CompOperand(tableName, columnName);
    {if (true) return CompOperand;}
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
